refactor: rearrange files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+### YOU CAN'T MODIFY THE CODE BELOW
 cmake_minimum_required(VERSION 3.10.2)
 project(python_interpreter)
 set(CMAKE_CXX_STANDARD 14)
@@ -25,5 +26,10 @@ file(GLOB antlr4-cpp-src
         ${PROJECT_SOURCE_DIR}/third_party/runtime/src/tree/xpath/*.cpp
         )
 add_library (antlr4-cpp-runtime ${antlr4-cpp-src})
-add_executable(code ${src_dir} src/main.cpp src/Evalvisitor.cpp)
+### YOU CAN"T MODIFY THE CODE ABOVE
+
+add_executable(code ${src_dir} src/main.cpp src/Evalvisitor.cpp) # Add all *.cpp file after src/main.cpp, like src/Evalvisitor.cpp did
+
+### YOU CAN'T MODIFY THE CODE BELOW
 target_link_libraries(code antlr4-cpp-runtime)
+### YOU CAN"T MODIFY THE CODE ABOVE
