--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-#Project exclude paths
-/.idea/
-/cmake-build-debug/
-/localtest/InnerData/
+# IDE files
+.idea/
+cmake-build-debug/
+build/
+gen/
+
+# Testcases
+testcases/hidden-testcases
+
